# starship-mcp

./: .gitignore  README.md  pyproject.toml  setup.py  starlog.hpi  starlog_flight.json
.github/workflows/: publish.yml
docs/diagrams/: 0_BaseSituation.mermaid  0_VibeCodingBecomesAutoCoding.mermaid  2_context_engineering_types.mermaid  3_problem_starship_solves.mermaid  4_starship_explained.mermaid  navigation_hierarchy.md  vibe_coding_core_pattern.mermaid
starship_mcp/: __init__.py  __main__.py  auto_populate.py  starship_mcp.py
